# unexpected-isaves

./: .gitignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  run-isort.yml
app/: main.py  requirements.txt
app/saves/: this_is_fine.xlsx
docs/: index.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/save_image/: save_image.py
src/tests/: save_image_unittest.py
src/unexpected_isaves/: blocks.json  image_utilities.py  save_image.py
src/unexpected_isaves/excel/: __init__.py  excel.py
src/unexpected_isaves/rubiks/: __init__.py  rubiks.py
tests/: README.md
tests/save_image/: tests.py
tests/save_image/fixtures/: to_excel_expected.json
tests/save_image/unit_tests/: tests.py
