[metadata]
name = save-image-Eric-Mendes
version = 0.0.1
author = Eric Mendes
author_email = ericvelasco.2000@gmail.com
description = Saves images in unconventional ways
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eric-Mendes/save-image
project_urls =
    Bug Tracker = https://github.com/Eric-Mendes/save-image/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src