[metadata]
name = unexpected_isaves
version = 1.2.2
author = Eric Mendes
author_email = ericvelasco.2000@gmail.com
description = Python library that paints an image on a spreadsheet or builds its pixel art in Minecraft.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eric-Mendes/unexpected_isaves
project_urls =
    Bug Tracker = https://github.com/Eric-Mendes/unexpected_isaves/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.5
    numpy>=1.21.5
    Pillow>=8.4.0
    openpyxl>=3.0.9
    matplotlib>=3.5.1

[options.packages.find]
where = src
